--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <p id="res">res</p>
   </div>
   <script src="./api/request.js"></script>
-  <script src="./api/api-es6.js"></script>
+  <script src="./api/service.js"></script>
   <script>
     // test 1
     // $.get( apiUrl + "data/test.json", (res) => {
