fix: update little

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
             <div class="center_bottom">
                     <div class="center_bottom_btn"><span class="content_title">白银市平台入口 >></span></div>
                 <div class="map_echarts" id="map_echart">
-所属
+                地图todo
                 </div>
             </div>
         </div>
