feat: add popChart

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,7 @@
             <div class="other_div">
                 <div class="content_left_title"><span class="content_title">城市入口</span></div>
                 <div class="org_content">
+                    <div id="popluation" style="height: 100%;"></div>
                 </div>
             </div>
             <div class="other_div">
@@ -139,7 +140,10 @@
             </div>
         </div>
     </div>
+    <!-- 机构概况 chart load -->
     <script src="./js/loadOrg.js"> </script>
+    <!-- 城市人口 chart load -->
+    <script src="./js/loadPop.js"> </script>
 </body>
 
 </html>
