feat: update some style

--- a/src/index.html
+++ b/src/index.html
@@ -74,12 +74,32 @@
             <div class="other_div">
                 <div class="content_left_title"><span class="content_title">城市入口</span></div>
                 <div class="org_content">
-                    <div id="popluation" style="height: 100%;"></div>
+                    <div class="chart_dev" id="popluation"></div>
                 </div>
             </div>
             <div class="other_div">
                 <div class="content_left_title"><span class="content_title">医疗运营情况</span></div>
-                <div class="org_content">
+                <div class="org_content displye_flex">
+                    <div style="width: 40%;">
+                        <div class="label_div">
+                            <span>出院人次(万人次):</span>
+                            <br />
+                            <span class="label_span1">26.88</span>
+                        </div>
+                        <div class="label_div">
+                            <span>出院人次(%):</span>
+                            <br />
+                            <span class="label_span2">26.88</span>
+                        </div>
+                        <div class="label_div">
+                            <span>病床使用率(天):</span>
+                            <br />
+                            <span class="label_span3">26.88</span>
+                        </div>
+                    </div>
+                    <div style="width: 60%;">
+                        <div class="chart_dev" id="popluation2"></div>
+                    </div>
                 </div>
             </div>
         </div>
