feat: add loadRun.js

--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,8 @@
     <script src="./js/loadOrg.js"> </script>
     <!-- 城市人口 chart load -->
     <script src="./js/loadPop.js"> </script>
+    <!-- 医疗运营情况 chart load -->
+    <script src="./js/loadRun.js"> </script>
 </body>
 
 </html>
