fix: fix the style

--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,7 @@
             <div class="item_div">
                 <div class="content_right_title"><span class="content_title">近30天机构门诊人次排行</span></div>
                 <div class="org_content">
+                    22
                 </div>
             </div>
         </div>
@@ -166,6 +167,10 @@
     <script src="./js/loadPop.js"> </script>
     <!-- 医疗运营情况 chart load -->
     <script src="./js/loadRun.js"> </script>
+
+
+    <!-- 近30天 chart load -->
+    <script src="./js/loadOutPatientTrend.js"> </script>
 </body>
 
 </html>
