feat: update the 坐标样式

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div style="width: 60%;">
-                        <div class="chart_dev" id="popluation2"></div>
+                        <div class="chart_dev" id="runChart"></div>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="item_div">
                 <div class="content_right_title"><span class="content_title">近30天机构门诊人次排行</span></div>
                 <div class="org_content">
-                    22
+                    <div class="chart_dev" id="patientTrend"></div>
                 </div>
             </div>
         </div>
