feat: update data used

--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,7 @@
             <div class="item_div">
                 <div class="content_right_title"><span class="content_title">人口增长趋势</span></div>
                 <div class="org_content">
+                        <div class="chart_dev" id="popIncrease"></div>
                 </div>
             </div>
             <div class="item_div">
@@ -169,8 +170,9 @@
     <script src="./js/loadRun.js"> </script>
 
 
-    <!-- 近30天 chart load -->
+    <!-- 近30天机构门诊人次排行 chart load -->
     <script src="./js/loadOutPatientTrend.js"> </script>
+    <!-- 人口增长 chart load -->
+    <script src="./js/loadPopIncrease.js"> </script>
 </body>
-
 </html>
