--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="other_div">
-                <div class="content_left_title"><span class="content_title">城市入口</span></div>
+                <div class="content_left_title"><span class="content_title">城市人口</span></div>
                 <div class="org_content">
                     <div class="chart_dev" id="popluation"></div>
                 </div>
