fix: update the style

--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,7 @@
     <script src="./lib/moment//moment-with-locales.min.js"></script>
     <!-- load lib end -->
     
+    <!-- 处理时间，跳转入口等 -->
     <script src="./js/main.js"></script>
 
     <!-- 机构概况 chart load -->
