--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
             <div class="center_bottom">
                 <div class="center_bottom_btn"><span class="content_title">白银市平台入口 >></span></div>
                 <div class="map_echarts" id="map_echart">
-                    地图
+                    
                 </div>
             </div>
         </div>
@@ -200,6 +200,10 @@
     <script src="./js/loadDataUpload.js"> </script>
     <!-- 疾病排序 chart load -->
     <script src="./js/loadDisease.js"> </script>
+
+
+    <!-- 白银市地图显示 chart load -->
+    <script src="./js/loadBaiyinMap.js"> </script>
 </body>
 
 </html>
