feat: delete the name

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
             <div id="day" class="left_date left_text_gradient"></div>
         </div>
         <div class="header_center ">
-            <span class="center_text_gradient">白银市全民健康信息平台</span>
+            <span class="center_text_gradient">信息平台</span>
         </div>
         <div class="header_right left_text_gradient">
-            <div class="right_org left_text_gradient">白银市卫纪委</div>
+            <div class="right_org left_text_gradient">##</div>
             <div class="right_out left_text_gradient">安全退出</div>
         </div>
     </div>
@@ -117,7 +117,7 @@
             </div>
             <div class="center_bottom">
                 <div class="center_bottom_btn">
-                    <h1 class="bigTitle">白银市平台入口 >></h1>
+                    <h1 class="bigTitle">平台入口 >></h1>
                 </div>
                 <div class="map_echarts" id="map_echart">
                 </div>
